deployment-sa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      serviceAccountName: nginx-sa
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
