clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
    tier: frontend
  ports:
  - protocol: TCP
    port: 80       
    targetPort: 80 
  type: ClusterIP
