loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-loadbalancer
  labels:
    app: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
