nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
    tier: frontend
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 80   
      nodePort: 30080
