service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
    tier: frontend
  ports:
  - protocol: TCP
    port: 80       # Port exposed by the service
    targetPort: 80 # Port on the container
  type: ClusterIP
