ingress-tls-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ac09a8282b1964be2964f994da2e799b-1146825759.ap-south-1.elb.amazonaws.com
      secretName: nginx-tls-secret
  rules:
    - host: ac09a8282b1964be2964f994da2e799b-1146825759.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
